# wta_bot

./: .gitignore  Dockerfile  README.md  env.sample  main.py  pyproject.toml  requirements.txt
app/: config.py  factories.py  handlers.py  keyboards.py  states.py
