[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Andrei Polyakov <ap120368@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
redis = "^4.5.1"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
flake8-return = "^1.2.0"
flake8-isort = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
